parse values
